[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = ["tray-icon", "icon-ico", "icon-png"] }
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-dialog = "2.0.0-alpha"
tauri-plugin-clipboard-manager = "2.0.0-alpha"
tauri-plugin-os = "2.0.0-alpha"
tauri-plugin-single-instance = "2.0.0-alpha"
tauri-plugin-cli = "2.0.0-alpha"
tauri-plugin-notification = "2.0.0-alpha"
futures-util = "0.3"

dirs = "1.0"
rust-ini = "0.20.0"
gio-sys = "0.18.1"
glib = "0.18.4"
gtk-sys = "0.18.0"
glib-sys = "0.18.1"
dataurl = "0.1.2"
gdk-pixbuf = "0.18.3"
gdk-pixbuf-sys = "0.18.0"
uuid = "1.6.1"
lazy_static = "1.4.0"
tokio = { version = "1.35.0", features = ["macros"] }
cached = "0.46.1"
notify-rust = "4.10.0"
assert_matches = "1.5.0"
tokio-websockets = { version = "0.5.0", features = ["client", "ring", "rand"] }
sha = "1.0.3"
http = "1.0.0"
url = "2.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
